# UR_Wall_Painting

./: README.md  ros2_env.dockerfile  run.sh  setup.sh
src/ur_painting_planner/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ur_painting_planner/config/: controller.yaml  kinematics.yaml
src/ur_painting_planner/include/ur_painting_planner/: ur_motion_planner.hpp
src/ur_painting_planner/launch/: painting_planner.launch.py  ur10e_comb_gazebo.launch.py  ur10e_controllers.launch.py  ur10e_gazebo.launch.py
src/ur_painting_planner/src/: painting_node.cpp  ur_motion_planner.cpp  ur_motion_planner_node.cpp  wall_coverage_node.cpp  wall_coverage_planner.hpp
src/ur_painting_planner/ur_painting_planner/: painting_node2.py
src/ur_painting_planner/worlds/: painting_world.world
